--- a/web/webapp/pom.xml
+++ b/web/webapp/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>persist</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
