--- a/services/mail-service/pom.xml
+++ b/services/mail-service/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>mail-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
